IDEの指摘修正